--- a/tabelas/index.html
+++ b/tabelas/index.html
@@ -7,8 +7,12 @@
   <title>Document</title>
 
   <style>
+    *{
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
     table{
       border: 1px black solid;
+      margin: auto;
     }
     table tr td, 
     table tr th
