--- a/formularios/index2.html
+++ b/formularios/index2.html
@@ -6,6 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <style>
+    *{
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    #file{
+      display: none;
+    }
+    .label-file{
+      background-color: #969090;
+      color: white;
+      height: 50px;
+      display: flex;
+      width: 100px;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+    }
+    input,
+    textarea, select{
+      outline: 0;
+    }
+
+  </style>
 </head>
 <body>
   <h1>Meu formulario</h1>
@@ -36,6 +60,22 @@
       </select>
       <br>
 
+
+      <!-- posso selecionar mais de uma opção com o multiple -->
+      <select name="estado" id="estado" multiple size="10">
+        <option value="RO">Rondonia</option>
+        <option value="MT">Mato Grosso</option>
+        <option value="PE">Pernambuco</option>
+        <option value="AM">Amazonas</option>
+        <option value="SP">São Paulo</option>
+        <option value="MG">Minas gerais</option>
+        <option value="ES">Espirito Santo</option>
+        <option value="TO">Tocantins</option>
+      </select>
+
+
+      <br>
+
       <label>Mascuino
         <input class="masc" id="radio" type="radio" name="sexo" value="M" checked>
       </label>
@@ -47,6 +87,31 @@
       <br>
       <input type="submit" value="enviar">
 
+    </fieldset>
+
+    <fieldset>
+      <legend>Mensagem</legend>
+
+      <textarea name="termos" id="termos" cols="30" rows="10" style="resize: none;" readonly>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto deleniti consequatur molestias, suscipit assumenda nisi quia veritatis odit qui unde deserunt voluptatum id minima repellat ad quo, ducimus ut quidem.</textarea>
+
+      <textarea name="edit" id="edit" cols="30" rows="10" required style="resize: none;"></textarea>
+
+      <label class="label-file" for="file">Arquivo</label>
+      <input id="file" type="file">
+
+      <br>
+
+      <input type="hidden" value="teste" name="teste" id="teste">
+      <br>
+
+      <input type="button" name="botao" value="botao" id="">
+      <input type="reset" value="limpar tudo">
+      <input type="submit" value="enviar">
+      <br>
+
+      <input type="range" min="0" max="10" step="1">
+      <input type="time">
+      <input type="color">
     </fieldset>
     
   </form>
