--- a/formularios/index2.html
+++ b/formularios/index2.html
@@ -45,7 +45,7 @@
       <br>
       <label for="filhos">Numero de filhos</label>
       <br>
-      <input type="number" id="filhos" min="0" max="1000">
+      <input step=".5" type="number" id="filhos" min="0" max="1000">
 
       <br>
       <label for="data">Data</label>
