--- a/boder-radius/index.html
+++ b/boder-radius/index.html
@@ -57,14 +57,20 @@
       height: 500px;
     }
 
-
-
     p{
       background-color: aliceblue;
       white-space: nowrap;
-      width: 50px;
+      width: 550px;
       overflow: hidden;
       text-overflow: ellipsis;
+      font-size: 50px;
+
+      text-shadow: 4px 5px 0 rgb(0, 0, 0),
+      3px 4px 0 rgb(0, 0, 0),
+      2px 3px 0 rgb(0, 0, 0),
+      1px 3px 0 rgb(0, 0, 0),
+      0px 2px 0 rgb(0, 0, 0),
+      0px 1px 0 rgb(0, 0, 00);
     }
   </style>
 
