tag figure e iframe

--- a/iframes/index.html
+++ b/iframes/index.html
@@ -6,10 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <style>
+    div{
+      width: 50%;
+      margin: auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>video</h1>
+  <h1>Iframes</h1>
 
+  <div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.026658361845!2d-61.91717868469593!3d-10.885576824350103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93c99af45c37f799%3A0xb0d3aa0d3157b9d0!2sR.%20Maring%C3%A1%20-%20Ji-Paran%C3%A1%2C%20RO!5e0!3m2!1spt-BR!2sbr!4v1677092113295!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
   
+  <iframe src="https://pt-br.facebook.com/" frameborder="0"></iframe>
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/L1rf4h1OBq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
