--- a/formularios/index.html
+++ b/formularios/index.html
@@ -7,9 +7,17 @@
   <title>Document</title>
 
   <style>
+    /*
+      * Prefixed by https://autoprefixer.github.io
+      * PostCSS: v8.4.14,
+      * Autoprefixer: v10.4.7
+      * Browsers: last 4 version
+    */
+
     *{
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
     }
     form input{
       outline: 0;
@@ -19,7 +27,12 @@
       margin: auto;
     }
     form fieldset{
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
     }
     h1{
@@ -44,6 +57,8 @@
     .button-submit{
       margin-top: 30px;
       width: 150px;
+      -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
       align-self: center;
       height: 40px;
       border: none;
@@ -52,6 +67,7 @@
       font-size: 18px;
       font-weight: 500;
       border-radius: 6px;
+      -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,.3);
       box-shadow: 1px 1px 10px 1px rgba(0,0,0,.3);
     }
   </style>
