--- a/grid-gap/index.html
+++ b/grid-gap/index.html
@@ -30,13 +30,41 @@
     /* grid-css */
 
     .gridContainer{
+      width: 100%;
+      height: 700px;
       display: grid;
-      grid-template-columns: repeat(3,100px);
-      grid-template-rows: 100px 100px;
+      grid-template-columns: repeat(3, 1fr) 1fr 1fr;
+      grid-template-rows: repeat(3, 1fr);
       row-gap: 10px;
-      column-gap: 10px;
+      column-gap: 10px;      
       gap: 10px;
     }
+
+    .gridContainer .gridItem:nth-child(1){
+      background-color: red;
+      /* grid-column-start: 3;
+      grid-column-end: 4;
+      grid-row-start: 1;
+      grid-row-end: 2; */
+
+      /* grid-column-start: 1;
+      grid-column-end: -1;
+      grid-row-start: 1;
+      grid-row-end: 2; */
+/* 
+      grid-column: 1 / 3;
+      grid-row: 1 / 2; */
+
+      /* grid-column: 1 / span 5;
+      grid-row: 1 / 2; */
+      grid-column: 2 / -1;
+      grid-row: 1 / 2;
+    }
+    .gridContainer .gridItem:nth-child(2){
+      grid-column: 1 / 2;
+      grid-row: 1 / -1;
+    }
+
   </style>
 
 </head>
