--- a/praticando-grid-calculadora/index.html
+++ b/praticando-grid-calculadora/index.html
@@ -59,8 +59,9 @@
     }
     .zero,
     .mais{
-      border-right: solid 2px #969696;
-      border-bottom: solid 2px #969696;
+      border-right: solid 2px #797979;
+      border-bottom: solid 2px #797979;
+      background-color: #adadad;
     }
     .zero{
       grid-column: 1 / 3;
