--- a/especificidade/index.html
+++ b/especificidade/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
 
   <style>
     #unico{
@@ -16,6 +17,7 @@
     }
     p{
       color: yellow;
+      font-size: 2em;
     }
    
   </style>
