--- a/animacao/index.html
+++ b/animacao/index.html
@@ -26,15 +26,16 @@
       animation-timing-function: ease-in-out; 
       animation-fill-mode: both;    
       animation-play-state: running;      
-      
+      animation-delay: 2s;
       */
+      
       animation: teste 2s ease-in-out 3 alternate;
     } 
     #container div:nth-child(3){
       animation: teste 2s ease-in-out 2 2s alternate;
     }
     #container div:nth-child(4){
-      animation: teste 2s ease-in-out 2 2s alternate;
+      animation:  2s ease-in-out 2 2s alternate teste; 
       animation-fill-mode: backwards;
     }
     #container div:nth-child(5){
@@ -48,7 +49,10 @@
       0%{
         background-color: yellow;
         width: 100px;
-      }      
+      }     
+      15%, 80%{
+        height: 200px;
+      } 
       60%{
         background-color: red;
         transform: translateX(200px);
@@ -65,6 +69,9 @@
 <body>
   
   <h2>Animation</h2>
+
+  <p><code>animation: name duration timing-function delay interation-count direction fill-mode play-state</code></p>
+
 
   <div id="container" class="container">
     <div>1</div>
