--- a/slideshow-animation/index.html
+++ b/slideshow-animation/index.html
@@ -18,6 +18,7 @@
       height: 100vh;
       width: 100vw;
       position: relative;
+      overflow-x: hidden;
     }
     #slide-interno{
       height: 100%;
@@ -29,10 +30,10 @@
       position: absolute;
       left: 0;
       top: 0;
+      will-change: transform;
 
       animation-fill-mode: both;
-      animation: slideshow 30s cubic-bezier(.2,-0.5,.86,1.59) infinite alternate 2s both;
-
+      animation: slideshow 30s ease-in-out infinite alternate 2s both;
     }
     #slide-interno img{
       height: 100%;
@@ -42,42 +43,24 @@
 
     @keyframes slideshow{
             
-      0%{
+      0%, 17%{
         transform: translateX(0);
-      }
-      17%{
-        transform: translateX(0);
-      }
-      20%{
-        transform: translateX(-100vw);
-      }  
-      37%{
-        transform: translateX(-100vw);
-      }   
-      40%{
-        transform: translateX(-200vw);
-      }
-      57%{
-        transform: translateX(-200vw);
-      }
-      60%{
-        transform: translateX(-300vw);
-      }
-      77%{
-        transform: translateX(-300vw);
-      }
-      80%{
-        transform: translateX(-400vw);
       }      
-      93%{
+      20%, 37%{
+        transform: translateX(-100vw);
+      }           
+      40%, 57%{
+        transform: translateX(-200vw);
+      }      
+      60%, 77%{
+        transform: translateX(-300vw);
+      }      
+      80%, 93%{
         transform: translateX(-400vw);
-      }
-      95%{
+      }            
+      95%,100%{
         transform: translateX(-500vw);
-      }
-      100%{
-        transform: translateX(-500vw);
-      }
+      }     
     }
   </style>
 </head>
