--- a/slideshow-animation/index.html
+++ b/slideshow-animation/index.html
@@ -30,7 +30,10 @@
       position: absolute;
       left: 0;
       top: 0;
-      will-change: transform;
+      will-change: transform; 
+      /* avisa pro bowser que a propriedade
+      transform sofrerá uma mudança melhorando a 
+      performance da aplicação */
 
       animation-fill-mode: both;
       animation: slideshow 30s ease-in-out infinite alternate 2s both;
