--- a/Javascript/exercicio-soma/index.html
+++ b/Javascript/exercicio-soma/index.html
@@ -12,9 +12,12 @@
     var val1 = prompt("numero 1");
     var val2 = prompt("numero 2");
 
-    var result = parseInt(val1) + parseInt(val2);
+    var soma = parseFloat(val1) + parseFloat(val2);
+    var sub = parseFloat(val1) - parseFloat(val2);
+    var mult = parseFloat(val1) * parseFloat(val2);
+    var div = parseFloat(val1) / parseFloat(val2);
 
-    alert("Resultado: " + result);
+    alert("Soma: " + soma + "\nsubtracao: " + sub + "\nmultiplicação: " + mult + "\ndivisão: " + div);
 
   </script>
 </body>
